# my-protobuf-project

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  buf.yaml  deno.json  go.mod  main.ts  main_test.ts
proto/mycompany/accounts/v1/: accounts.proto
proto/mycompany/products/v1/: products.proto
proto/mycompany/services/v1/: services.proto
src/: bin.rs
